@startuml

title __STRATEGIES's Class Diagram__\n

  namespace com.stroganov {
    namespace Strategies {
      abstract class com.stroganov.Strategies.AbstractStrategy {
          ~ paperCount : int
          ~ transactionArrayList : ArrayList<Transaction>
          + AbstractRSA_Strategy()
          + getTransactionArray()
          + printLn()
          {abstract} + runStrategy()
      }
    }
  }
  

  namespace com.stroganov {
    namespace Strategies {
      class com.stroganov.Strategies.Balance {
          - allBalance : Double
          - freeMoney : Double
          - papers : int
          + Balance()
          + Balance()
          + getAllBalance()
          + getAllBalance()
          + getFreeMoney()
          + getPapers()
          + setAllBalance()
          + setFreeMoney()
          + setPapers()
      }
    }
  }
  

  namespace com.stroganov {
    namespace Strategies {
      class com.stroganov.Strategies.RSA_Strategy {
          ~ paperCount : int
          ~ transactionArrayList : ArrayList<Transaction>
          + RSA_Strategy()
          + getTransactionArrayList()
          + printLn()
          + testStrategyAbstract()
      }
    }
  }
  

  namespace com.stroganov {
    namespace Strategies {
      class com.stroganov.Strategies.RSA_StrategyStopLoss {
          + RSA_StrategyStopLoss()
          + runStrategy()
      }
    }
  }
  

  namespace com.stroganov {
    namespace Strategies {
      abstract class com.stroganov.Strategies.StartStrategy {
          ~ startMoney : double
          + StartStrategy()
          {abstract} + testStrategy()
      }
    }
  }
  

  namespace com.stroganov {
    namespace Strategies {
      class com.stroganov.Strategies.StartStrategyNow {
          + StartStrategyRSA_StopLoss()
          + testStrategy()
      }
    }
  }
  

  namespace com.stroganov {
    namespace Strategies {
      class com.stroganov.Strategies.StrategyParam {
          - buyLIne : int
          - periodRSA : int
          - sellLine : int
          - stopLoss : int
          + StrategyParam()
          + equals()
          + getBuyLIne()
          + getPeriodRSA()
          + getSellLine()
          + getStopLoss()
          + hashCode()
          + setBuyLIne()
          + setPeriodIndicator()
          + setSellLine()
          + setStopLoss()
          + toString()
      }
    }
  }
  

  namespace com.stroganov {
    namespace Strategies {
      class com.stroganov.Strategies.TradeAction {
          - brokerTax : Double
          - logPrint : boolean
          + TradeAction()
          + buy()
          + getBalance()
          + sell()
      }
    }
  }
  

  namespace com.stroganov {
    namespace Strategies {
      class com.stroganov.Strategies.Transaction {
          - candleIndex : int
          - countPapers : int
          - price : Double
          - tradeDirect : String
          + Transaction()
          + equals()
          + getBalance()
          + getCandleIndex()
          + getCountPapers()
          + getPrice()
          + getTradeDirect()
          + hashCode()
          + toString()
      }
    }
  }
  

  com.stroganov.Strategies.AbstractStrategy o-- com.stroganov.CandleStream : candleStream
  com.stroganov.Strategies.AbstractStrategy o-- com.stroganov.Indicators.AbstractIndicator : rsa
  com.stroganov.Strategies.AbstractStrategy o-- com.stroganov.Strategies.TradeAction : tradeAction
  com.stroganov.Strategies.RSA_Strategy o-- com.stroganov.CandleStream : candleStream
  com.stroganov.Strategies.RSA_Strategy o-- com.stroganov.Indicators.AbstractIndicator : rsa
  com.stroganov.Strategies.RSA_Strategy o-- com.stroganov.Strategies.TradeAction : tradeAction
  com.stroganov.Strategies.RSA_StrategyStopLoss -up-|> com.stroganov.Strategies.AbstractStrategy
  com.stroganov.Strategies.StartStrategy o-- com.stroganov.CandleStream : candleStream
  com.stroganov.Strategies.StartStrategyNow -up-|> com.stroganov.Strategies.StartStrategy
  com.stroganov.Strategies.StartStrategyNow o-- com.stroganov.Indicators.IndicatorContainer : container
  com.stroganov.Strategies.TradeAction o-- com.stroganov.Strategies.Balance : balance
  com.stroganov.Strategies.Transaction o-- com.stroganov.Strategies.Balance : balance


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
